--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Diego Romero <diego.940713@gmail.com>
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Manuel Acero <bijuu5445@gmail.com>
